This fixes plone/Products.CMFPlone#979 and plone/Products.CMFPlone#981 related to text not wrapping when unusual (and artificial) text with no white-space exists in the page.

--- a/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
+++ b/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
@@ -385,6 +385,9 @@ hr {
   overflow: visible;
   clip: auto;
 }
+body {
+  word-wrap: break-word;
+}
 h1,
 h2,
 h3,
