--- a/plonetheme/barceloneta/theme/less/type.plone.less
+++ b/plonetheme/barceloneta/theme/less/type.plone.less
@@ -1,5 +1,8 @@
 //*// TYPE //*//
 
+//*// Body //*//
+body { word-wrap: break-word; }
+
 //*// Headings
 h1, h2, h3, h4, h5, h6 {
   font-family: @plone-headings-font-family;
